Thu Nov 22 05:24:51 2001  Craig Rodrigues  <crodrigu@bbn.com>

	* examples/QOS/Diffserv: Added a simple example to illustrate
	  how to set Diffserv Codepoints on an ACE_SOCK_CODgram.
	* examples/QOS/Makefile: Updated.

Wed Nov 21 11:35:50 2001  Michael Kircher  <Michael.Kircher@mchp.siemens.de>

  * ace/Bound_Ptr.h
  * ace/Bound_Ptr.i
  * ace/Future.cpp
  * ace/Future.h
  * ace/Refcounted_Auto_Ptr.h
  * ace/Refcounted_Auto_Ptr.i

    Made the memory allocation failure behavior consistent
    to the behavior prior to the change on Sun Oct 28 13:15:00 2001.
    Thanks to Christopher Kohlhoff <chris@kohlhoff.com> who prepared
    this change.
    The problem was that with the above mentioned change failed
    allocations would return 0 in either case, if exceptions were
    enabled by the platform or not. This was incosistent to the 
    behavior before, as new threw bad_alloc on allocation failure
    when exceptions were supported by the platform.

    To fix this we faced the following forces:
    - Not to introduce yet another macro
    - Minimize impact of changes, localize the problem
    - Keep the new calls wrapped by a ACE_NEW macro to allow
      users to eventually redefine the macro (using e.g. new (nothrow)
    
    As the ACE_NEW macros are quite restrictive in their supported 
    semantics, e.g. you can only return on error, we decided to introduce
    a new method (as inline) internal_create which does the allocation.
    internal_create is called by create which does the differentiation
    between the exception-supported and exception-not-supported case.

Wed Nov 21 09:07:37 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/OS.h: Updated the ACE_GUARD_ACTION macro and added a new
	  ACE_GUARD_REACTION macro.  Then, reimplemented the ACE_GUARD and
 	  ACE_GUARD_RETURN macros in terms of these new macros.  Thanks to
 	  Don Hinton for contributing these.

	* ace/Log_Msg_Callback.h: Improved the comments to explain why